# stocksim

./: README.md  pyproject.toml
src/stocksim/: __init__.py  app.py  casino.py  clock.py  db.py  news.py  portfolio.py  simulator.py  stocks.py  styles.tcss
src/stocksim/widgets/: __init__.py  casino.py  casino_modals.py  portfolio_panel.py  trade_modal.py  watchlist.py
tests/: test_app_smoke.py  test_casino.py  test_clock.py  test_db.py  test_news.py  test_portfolio.py  test_simulator.py
