[project]
name = "stocksim"
version = "0.2.0"
description = "StockSim — terminal paper-trading game with simulated prices."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.6",
]

[project.scripts]
stocksim = "stocksim:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
